--- a/fastest-web/package.json
+++ b/fastest-web/package.json
@@ -3,7 +3,9 @@
   "name": "fastest-web",
   "version": "0.0.1",
   "description": "",
-  "keywords": "",
+  "keywords": [
+    ""
+  ],
   "license": "",
   "author": "",
   "scripts": {
@@ -13,6 +15,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.0"
+  },
+  "staticFiles": {
+    "staticPath": ["robots.txt", "humans.txt"]
   }
 }
