--- a/fastest-web/package.json
+++ b/fastest-web/package.json
@@ -16,9 +16,14 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-purgecss": "^3.0.0",
     "parcel-plugin-static-files-copy": "^2.5.0"
   },
   "staticFiles": {
-    "staticPath": ["robots.txt", "humans.txt"]
-  }
+    "staticPath": [
+      "robots.txt",
+      "humans.txt"
+    ]
+  },
+  "dependencies": {}
 }
