--- a/fastest-web/package.json
+++ b/fastest-web/package.json
@@ -17,13 +17,15 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-purgecss": "^3.0.0",
-    "parcel-plugin-static-files-copy": "^2.5.0"
+    "parcel-plugin-static-files-copy": "^2.5.0",
+    "parcel-plugin-workbox": "^0.2.0"
   },
-  "staticFiles": {
-    "staticPath": [
-      "robots.txt",
-      "humans.txt"
-    ]
-  },
-  "dependencies": {}
+  "dependencies": {},
+  "workbox": {
+    "importScripts": [
+      "./js/service-worker.js"
+    ],
+    "globDirectory": "./dist",
+    "globPatterns": "**/*.{css,html,gif,js,jpg,png,svg,webp}"
+  }
 }
