--- a/fastest-web/package.json
+++ b/fastest-web/package.json
@@ -9,9 +9,10 @@
   "license": "",
   "author": "",
   "scripts": {
+    "clean-build": "rm -rf dist .cache",
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
-    "start": "npm run build && npm run dev",
+    "start": "npm run clean-build && npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -21,6 +22,9 @@
     "parcel-plugin-workbox": "^0.2.0"
   },
   "dependencies": {},
+  "staticFiles": {
+    "staticPath": ["robots.txt", "humans.txt"]
+  },
   "workbox": {
     "importScripts": [
       "./js/service-worker.js"
