--- a/fastest-web/package.json
+++ b/fastest-web/package.json
@@ -1,35 +1,35 @@
 {
-  "private": true,
   "name": "fastest-web",
-  "version": "0.0.1",
-  "description": "",
-  "keywords": [
-    ""
-  ],
-  "license": "",
-  "author": "",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "clean-build": "rm -rf dist .cache",
-    "build": "parcel build index.html",
-    "dev": "parcel index.html --open",
-    "start": "npm run clean-build && npm run build && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
+    "vue": "^3.0.0-0",
+    "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-purgecss": "^3.0.0",
-    "parcel-plugin-static-files-copy": "^2.5.0",
-    "parcel-plugin-workbox": "^0.2.0"
-  },
-  "dependencies": {},
-  "staticFiles": {
-    "staticPath": ["robots.txt", "humans.txt"]
-  },
-  "workbox": {
-    "importScripts": [
-      "./js/service-worker.js"
-    ],
-    "globDirectory": "./dist",
-    "globPatterns": "**/*.{css,html,gif,js,jpg,png,svg,webp}"
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "prettier": "^1.19.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3"
   }
 }
